# py-wow-hotfixes

./: .gitignore  README.md  hotfixes.code-workspace  main.py  pyproject.toml  requirements.txt  setup.cfg  test.json
.github/: FUNDING.yml
.github/workflows/: python-package.yml
hotfixes/: __init__.py  dbdefs.py  parser.py  structures.py  utils.py
src/hotfixes/: bytelist.py  dbdefs.py  parser.py  structures.py  t_structs.py  utils.py
tests/: test_hotfixes.py
